Make sure the button and dropdown overlap

--- a/core-bundle/assets/styles/component/breadcrumb.pcss
+++ b/core-bundle/assets/styles/component/breadcrumb.pcss
@@ -67,7 +67,7 @@
         display: flex;
         flex-direction: column;
         gap: 2px;
-        margin: 5px 0 0;
+        margin: 4px 0 0;
         padding: 8px 15px;
         color: var(--text);
         background: var(--content-bg) !important;
